# CalendarDisplay

./: CMakeLists.txt  CalendarDisplay.code-workspace  Jenkinsfile  README.md  sdkconfig  sdkconfig.defaults
docs/architecture/: SEED-NOTES.md  architecture.yaml
main/: Application.cpp  Application.h  Buttons.cpp  Buttons.h  CMakeLists.txt  CalendarEventsDto.cpp  CalendarEventsDto.h  CalendarUI.cpp  CalendarUI.h  Device.cpp  Device.h  DeviceConfiguration.cpp  Fonts.h  Kconfig.projbuild  LoadingUI.cpp  LogManager.cpp  LogManager.h  LvglUI.cpp  LvglUI.h  Messages.h  OTAManager.cpp  gpiopin.cpp  gpiopin.h  idf_component.yml  includes.h  it8951.cpp  it8951.h  lv_font_medium_28.c  lv_font_medium_46.c  lv_font_medium_56.c  lv_font_medium_92.c  lv_font_regular_24.c  lv_font_regular_28.c  lv_font_regular_44.c  lv_font_regular_48.c  lv_font_regular_56.c  main.cpp  support.cpp  support.h  waveshare_it8951.cpp  (+1 more)
scripts/: generate-secrets.py
tools/: generate-fonts.json
